<resources>
    <string name="app_name">Sensor Publisher</string>
    <string name="icon_label">Sensor</string>
    <string name="empty_data">No sensors available</string>
    <string name="org_name">National Institute of Informatics</string>
    <string name="activity_name_launcher">Sensor Publisher</string>
    <string name="button_run">Run</string>
    <string name="button_run_with_config_server">Run\nwith ConfigServer</string>
    <string name="button_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="incomplete_service_settings">Please set Service parameters</string>
    <string name="incomplete_broker_settings">Please set Broker parameters</string>
    <string name="activity_name_main">Main</string>
    <string name="stats_last_sent">Last Sent: </string>
    <string name="stats_sent_count">Sent Msg: </string>
    <string name="cellular_label">Cellular: </string>
    <string name="location_label">Location: </string>
    <string name="button_label_reset">Reset</string>
    <string name="button_label_run">Run</string>
    <string name="button_label_stop">Stop</string>
    <string name="checkbox_label_select_all">Select all sensor types</string>
    <string name="sensor_item_number_placeholder">#0</string>
    <string name="sensor_type_name_placeholder">Sensor XXX</string>
    <string name="auth_json_expired">Given \"auth.json\" has expired. Please get the new one.</string>
    <string name="keychain_alias_unspecified">Please pick an alias from KeyChain</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_connecting">Connecting…</string>
    <string name="activity_name_settings">Settings</string>
    <string name="pref_summary_mandatory_notset">Not set: MANDATORY!</string>
    <string name="pref_summary_password_notset">Not set</string>
    <string name="pref_summary_password_mask">*****</string>
    <string name="preference_file_access_token">access_token</string>
    <string name="preference_file_config_server">config_server</string>
    <string name="snackbar_access_token_empty">Please load an access token at first</string>
    <string name="snackbar_access_token_expired">Sorry, access token has expired</string>
    <string name="snackbar_access_token_load_ok">OK, access token has successfully loaded</string>
    <string name="pref_title_sensors">Sensors</string>
    <string name="pref_summary_sensors">Sensor parameters and publishing info</string>
    <string name="pref_title_sensor_control">Sensor Control</string>
    <string name="pref_key_sensor_interval_timer">interval_timer</string>
    <string name="pref_item_sensor_interval_timer">Interval Timer (x100 milliseconds)</string>
    <string name="pref_default_sensor_interval_timer">50</string>
    <string name="pref_title_user_data">User Data</string>
    <string name="pref_key_user_data_publisher">publisher</string>
    <string name="pref_item_user_data_publisher">User Data: Publisher</string>
    <string name="pref_key_user_data_note">note</string>
    <string name="pref_item_user_data_note">User Data: Note</string>
    <string name="pref_title_device_info">Device Info</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_summary_location">Location attributes</string>
    <string name="pref_key_toggle_location">toggle_location</string>
    <string name="pref_item_toggle_location">Track Geological Location</string>
    <string name="pref_key_toggle_location_auto_update">toggle_location_auto_update</string>
    <string name="pref_item_toggle_location_auto_update">Enable Auto Update</string>
    <string name="pref_key_location_provider">location_provider</string>
    <string name="pref_item_location_provider">Location Provider</string>
    <string name="pref_default_location_provider">gps</string>
    <string name="pref_key_location_latitude">location_latitude</string>
    <string name="pref_item_location_latitude">Latitude [-90.0, 90.0]</string>
    <string name="pref_key_location_longitude">location_longitude</string>
    <string name="pref_item_location_longitude">Longitude [-180.0, 180.0]</string>
    <string name="pref_title_cellular">Cellular</string>
    <string name="pref_summary_cellular">Cellular attributes</string>
    <string name="pref_key_toggle_cellular">toggle_cellular</string>
    <string name="pref_item_toggle_cellular">Monitor Signal Strengths</string>
    <string name="pref_category_sinetstream">pref_category_sinetstream</string>
    <string name="pref_title_sinetstream">SINETStream</string>
    <string name="pref_summary_sinetstream">SINETStream control parameters</string>
    <string name="pref_title_service">Service</string>
    <string name="pref_summary_service">Service attributes</string>
    <string name="pref_title_brokers">Brokers</string>
    <string name="pref_summary_brokers">Target broker attributes</string>
    <string name="pref_title_userauth">User Authentication</string>
    <string name="pref_summary_userauth">User account and password</string>
    <string name="pref_title_tls">SSL/TLS Parameters</string>
    <string name="pref_summary_tls">Secure network connection</string>
    <string name="pref_key_toggle_tls">toggle_ssltls</string>
    <string name="pref_item_toggle_tls">Enable SSL/TLS Layer</string>
    <string name="pref_key_tls_protocol">tls_protocol</string>
    <string name="pref_item_tls_protocol">SSL/TLS Protocol</string>
    <string name="pref_default_tls_protocol">TLSv1.2</string>
    <string name="pref_key_tls_server_certs">tls_server_certs</string>
    <string name="pref_item_tls_server_certs">Enable Self-Signed Server Certificates</string>
    <string name="pref_key_tls_client_certs">tls_client_certs</string>
    <string name="pref_item_tls_client_certs">Enable Client Certificates</string>
    <string name="pref_key_tls_check_hostname">tls_check_hostname</string>
    <string name="pref_item_tls_check_hostname">Enable Hostname Verification</string>
    <string name="pref_title_crypto">Data Encryption</string>
    <string name="pref_summary_crypto">Protect sensitive data</string>
    <string name="pref_key_toggle_crypto">toggle_crypto</string>
    <string name="pref_item_toggle_crypto">Enable Data Encryption</string>
    <string name="pref_title_crypto_parameters">Cryptographic Parameters</string>
    <string name="pref_key_crypto_algorithm">crypto_algorithm</string>
    <string name="pref_item_crypto_algorithm">Algorithm</string>
    <string name="pref_default_crypto_algorithm">AES</string>
    <string name="pref_key_crypto_key_length">crypto_key_length</string>
    <string name="pref_item_crypto_key_length">Key Length</string>
    <string name="pref_key_crypto_mode">crypto_mode</string>
    <string name="pref_item_crypto_mode">Modes</string>
    <string name="pref_key_crypto_padding">crypto_padding</string>
    <string name="pref_item_crypto_padding">Padding Scheme</string>
    <string name="pref_title_crypto_kdf">Key Derivation Function</string>
    <string name="pref_key_crypto_kdf_password">crypto_kdf_password</string>
    <string name="pref_item_crypto_kdf_password">Password</string>
    <string name="pref_key_crypto_kdf_algorithm">crypto_kdf_algorithm</string>
    <string name="pref_item_crypto_kdf_algorithm">Algorithm</string>
    <string name="pref_default_crypto_kbf_algorithm">PBKDF2WithHmacSHA256</string>
    <string name="pref_key_crypto_kdf_salt_bytes">crypto_kdf_salt_bytes</string>
    <string name="pref_item_crypto_kdf_salt_bytes">Salt Bytes</string>
    <string name="pref_key_crypto_kdf_iteration">crypto_kdf_iteration</string>
    <string name="pref_item_crypto_kdf_iteration">Iteration</string>
    <string name="pref_title_crypto_debug">Developers Option</string>
    <string name="pref_key_toggle_crypto_debug">crypto_debug_crypto_debug</string>
    <string name="pref_item_toggle_crypto_debug">Enable CRYPTO Debug</string>
    <string name="pref_title_mqtt">MQTT</string>
    <string name="pref_summary_mqtt">MQTT parameters</string>
    <string name="pref_title_mqtt_protocol">MQTT Protocol</string>
    <string name="pref_key_mqtt_mqtt_version">mqtt_mqtt_version</string>
    <string name="pref_item_mqtt_mqtt_version">Version</string>
    <string name="pref_default_mqtt_version">DEFAULT</string>
    <string name="pref_key_mqtt_qos">mqtt_qos</string>
    <string name="pref_item_mqtt_qos">QoS to Deliver Message</string>
    <string name="pref_default_mqtt_qos">0</string>
    <string name="pref_key_mqtt_retain">mqtt_retain</string>
    <string name="pref_item_mqtt_retain">Retain Published Message</string>
    <string name="pref_key_mqtt_clean_session">mqtt_clean_session</string>
    <string name="pref_item_mqtt_clean_session">Clean Session</string>
    <string name="pref_title_mqtt_connect">MQTT Connect</string>
    <string name="pref_key_mqtt_connect_keepalive">mqtt_connect_keepalive</string>
    <string name="pref_item_mqtt_connect_keepalive">Keep Alive Interval (seconds)</string>
    <string name="pref_key_mqtt_connect_automatic_reconnect">mqtt_connect_automatic_reconnect</string>
    <string name="pref_item_mqtt_connect_automatic_reconnect">Enable Automatic Reconnect</string>
    <string name="pref_key_mqtt_connect_connection_timeout">mqtt_connect_connection_timeout</string>
    <string name="pref_item_mqtt_connect_connection_timeout">Connection Timeout (seconds)</string>
    <string name="pref_key_mqtt_reconnect_max_delay">mqtt_reconnect_max_delay</string>
    <string name="pref_item_mqtt_reconnect_max_delay">Max Reconnect Delay (milliseconds)</string>
    <string name="pref_title_mqtt_inflight">MQTT InFlight</string>
    <string name="pref_summary_mqtt_inflight">MQTT InFlight parameters</string>
    <string name="pref_title_debug_options">Debug Options</string>
    <string name="pref_key_toggle_protocol_debug">toggle_protocol_debug</string>
    <string name="pref_item_toggle_protocol_debug">Enable PROTOCOL debug</string>
    <string name="pref_key_toggle_location_debug">toggle_location_debug</string>
    <string name="pref_item_toggle_location_debug">Enable LOCATION debug</string>
    <string name="pref_key_toggle_cellular_debug">toggle_cellular_debug</string>
    <string name="pref_item_toggle_cellular_debug">Enable CELLULAR debug</string>
    <string name="pref_title_devopt">Developer Options</string>
    <string name="pref_key_toggle_devopt_event_logging">devopt_event_logging</string>
    <string name="pref_item_toggle_devopt_event_logging">Enable Event Logging</string>
    <string name="pref_key_devopt_log_level">devopt_log_level</string>
    <string name="pref_item_devopt_log_level">Log Level</string>
    <string name="pref_default_devopt_log_level">warning</string>
    <string name="pref_title_access_token">Access Token</string>
    <string name="pref_key_access_token_server_url">access_token_server_url</string>
    <string name="pref_item_access_token_server_url">Configuration Server URL</string>
    <string name="pref_key_access_token_account">access_token_account</string>
    <string name="pref_item_access_token_account">User Account</string>
    <string name="pref_key_access_token_secret_key">access_token_secret_key</string>
    <string name="pref_item_access_token_secret_key">Secret Key</string>
    <string name="pref_key_access_token_expiration_date">access_token_expiration_date</string>
    <string name="pref_item_access_token_expiration_date">Expiration Date</string>
    <string name="pref_key_access_token_action_pickup">access_token_pickup</string>
    <string name="pref_item_access_token_action_pickup">Pickup access token on device</string>
    <string name="pref_key_access_token_action_download">access_token_download</string>
    <string name="pref_item_access_token_action_download">Download access token from Config Server</string>
</resources>