<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/pref_title_crypto">

        <SwitchPreferenceCompat
            app:key="@string/pref_key_toggle_crypto"
            app:title="@string/pref_item_toggle_crypto"
            app:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_title_crypto_parameters"
        app:dependency="@string/pref_key_toggle_crypto">

        <ListPreference
            app:key="@string/pref_key_crypto_algorithm"
            app:title="@string/pref_item_crypto_algorithm"
            app:defaultValue="@string/pref_default_crypto_algorithm"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/crypto_algorithms"
            app:entryValues="@array/crypto_algorithms"
            app:dialogTitle="@string/pref_item_crypto_algorithm"/>

        <ListPreference
            app:key="@string/pref_key_crypto_key_length"
            app:title="@string/pref_item_crypto_key_length"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/crypto_key_lengths"
            app:entryValues="@array/crypto_key_lengths"
            app:dialogTitle="@string/pref_item_crypto_key_length"/>

        <ListPreference
            app:key="@string/pref_key_crypto_mode"
            app:title="@string/pref_item_crypto_mode"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/crypto_modes"
            app:entryValues="@array/crypto_modes"
            app:dialogTitle="@string/pref_item_crypto_mode"/>

        <ListPreference
            app:key="@string/pref_key_crypto_padding"
            app:title="@string/pref_item_crypto_padding"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/crypto_paddings"
            app:entryValues="@array/crypto_paddings"
            app:dialogTitle="@string/pref_item_crypto_padding"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_title_crypto_kdf"
        app:dependency="@string/pref_key_toggle_crypto">

        <EditTextPreference
            app:key="@string/pref_key_crypto_kdf_password"
            app:title="@string/pref_item_crypto_kdf_password"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:key="@string/pref_key_crypto_kdf_algorithm"
            app:title="@string/pref_item_crypto_kdf_algorithm"
            app:defaultValue="@string/pref_default_crypto_kbf_algorithm"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/crypto_key_derivation_algorithms"
            app:entryValues="@array/crypto_key_derivation_algorithms"
            app:dialogTitle="@string/pref_item_crypto_kdf_algorithm"/>

        <EditTextPreference
            app:dialogTitle="@string/pref_item_crypto_kdf_salt_bytes"
            app:key="@string/pref_key_crypto_kdf_salt_bytes"
            app:title="@string/pref_item_crypto_kdf_salt_bytes"
            app:defaultValue="64"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogTitle="@string/pref_item_crypto_kdf_iteration"
            app:key="@string/pref_key_crypto_kdf_iteration"
            app:title="@string/pref_item_crypto_kdf_iteration"
            app:defaultValue="1000"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_title_crypto_debug"
        app:dependency="@string/pref_key_toggle_crypto">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/pref_key_toggle_crypto_debug"
            app:title="@string/pref_item_toggle_crypto_debug" />
    </PreferenceCategory>
</PreferenceScreen>