<!--
  ~ Copyright (c) 2020-2021 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Sensor Control -->
    <PreferenceCategory app:title="@string/pref_title_sensor_control">
        <EditTextPreference
            app:defaultValue="@string/pref_default_sensor_interval_timer"
            app:icon="@drawable/timer"
            app:key="@string/pref_key_sensor_interval_timer"
            app:title="@string/pref_item_sensor_interval_timer"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <!-- User Data -->
    <PreferenceCategory app:title="@string/pref_title_user_data">
        <EditTextPreference
            app:icon="@drawable/account"
            app:key="@string/pref_key_user_data_publisher"
            app:title="@string/pref_item_user_data_publisher"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:icon="@drawable/note"
            app:key="@string/pref_key_user_data_note"
            app:title="@string/pref_item_user_data_note"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <!-- Device Info -->
    <PreferenceCategory app:title="@string/pref_title_device_info">
        <!-- Location -->
        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.LocationSettingsFragment"
            app:icon="@drawable/map_marker"
            app:summary="@string/pref_summary_location"
            app:title="@string/pref_title_location" />

        <!-- Cellular -->
        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.CellularSettingsFragment"
            app:icon="@drawable/network_strength_4"
            app:summary="@string/pref_summary_cellular"
            app:title="@string/pref_title_cellular" />
    </PreferenceCategory>

</PreferenceScreen>
