<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_title_sinetstream">

        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.ServiceSettingsFragment"
            app:summary="@string/pref_summary_service"
            app:title="@string/pref_title_service" />
        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.BrokerSettingsFragment"
            app:summary="@string/pref_summary_brokers"
            app:title="@string/pref_title_brokers" />
        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.MqttSettingsFragment"
            app:summary="@string/pref_summary_mqtt"
            app:title="@string/pref_title_mqtt" />
        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.UserAuthSettingsFragment"
            app:summary="@string/pref_summary_userauth"
            app:title="@string/pref_title_userauth" />
        <Preference
            app:fragment="com.example.samplepublisher.ui.settings.TlsSettingsFragment"
            app:summary="@string/pref_summary_tls"
            app:title="@string/pref_title_tls" />
        <Preference
            app:enabled="false"
            app:fragment="com.example.samplepublisher.ui.settings.CryptoSettingsFragment"
            app:summary="@string/pref_summary_crypto"
            app:title="@string/pref_title_crypto" />
    </PreferenceCategory>

</PreferenceScreen>