<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_debug_options">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_toggle_protocol_debug"
            android:title="@string/pref_item_toggle_protocol_debug" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_toggle_location_debug"
            android:title="@string/pref_item_toggle_location_debug" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_toggle_cellular_debug"
            android:title="@string/pref_item_toggle_cellular_debug" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_devopt"
        app:isPreferenceVisible="false">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_toggle_devopt_event_logging"
            android:title="@string/pref_item_toggle_devopt_event_logging" />

        <ListPreference
            android:defaultValue="@string/pref_default_devopt_log_level"
            android:entries="@array/log_level"
            android:entryValues="@array/log_level"
            android:key="@string/pref_key_devopt_log_level"
            android:title="@string/pref_item_devopt_log_level"
            app:dependency="@string/pref_key_toggle_devopt_event_logging"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
