<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
        Material Design Icons:
        https://pictogrammers.com/library/mdi/icon/
    -->
    <PreferenceCategory android:title="@string/pref_title_access_token">
        <!-- Make this section read-only -->
        <EditTextPreference
            app:key="@string/pref_key_access_token_server_url"
            app:selectable="false"
            app:title="@string/pref_item_access_token_server_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/pref_key_access_token_account"
            app:selectable="false"
            app:title="@string/pref_item_access_token_account"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/pref_key_access_token_secret_key"
            app:selectable="false"
            app:title="@string/pref_item_access_token_secret_key"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/pref_key_access_token_expiration_date"
            app:selectable="false"
            app:title="@string/pref_item_access_token_expiration_date"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Operations">
        <Preference
            android:key="@string/pref_key_access_token_action_pickup"
            android:title="@string/pref_item_access_token_action_pickup"
            android:icon="@drawable/file_find" />

        <EditTextPreference
            android:key="@string/pref_key_access_token_action_download"
            android:dialogLayout="@layout/dialog_config_server_url"
            android:dialogTitle="@string/pref_item_access_token_server_url"
            android:title="@string/pref_item_access_token_action_download"
            android:icon="@drawable/download" />

    </PreferenceCategory>
</PreferenceScreen>
