<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/pref_title_tls">

        <SwitchPreferenceCompat
            app:key="@string/pref_key_toggle_tls"
            app:title="@string/pref_item_toggle_tls"
            app:defaultValue="false"/>

        <ListPreference
            app:key="@string/pref_key_tls_protocol"
            app:title="@string/pref_item_tls_protocol"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/sslcontext_algorithms"
            app:entryValues="@array/sslcontext_algorithms"
            app:dialogTitle="@string/pref_item_tls_protocol"
            app:defaultValue="@string/pref_default_tls_protocol"
            app:dependency="@string/pref_key_toggle_tls" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_tls_server_certs"
            app:title="@string/pref_item_tls_server_certs"
            app:defaultValue="false"
            app:dependency="@string/pref_key_toggle_tls" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_tls_client_certs"
            app:title="@string/pref_item_tls_client_certs"
            app:defaultValue="false"
            app:dependency="@string/pref_key_toggle_tls" />

        <!-- OBSOLETED
        <EditTextPreference
            app:key="@string/pref_key_tls_ca_certs"
            app:title="@string/pref_item_tls_ca_certs"
            app:useSimpleSummaryProvider="true"
            app:dependency="@string/pref_key_toggle_tls" />

        <EditTextPreference
            app:key="@string/pref_key_tls_certfile"
            app:title="@string/pref_item_tls_certfile"
            app:useSimpleSummaryProvider="true"
            app:dependency="@string/pref_key_toggle_tls" />

        <EditTextPreference
            app:key="@string/pref_key_tls_keyfilePassword"
            app:title="@string/pref_item_tls_keyfilePassword"
            app:useSimpleSummaryProvider="false"
            app:dependency="@string/pref_key_toggle_tls" />
            -->

        <SwitchPreferenceCompat
            app:key="@string/pref_key_tls_check_hostname"
            app:title="@string/pref_item_tls_check_hostname"
            app:defaultValue="false"
            app:dependency="@string/pref_key_toggle_tls" />
    </PreferenceCategory>
</PreferenceScreen>