<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 National Institute of Informatics
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/pref_title_mqtt_connect">

        <EditTextPreference
            app:dialogTitle="@string/pref_item_mqtt_connect_keepalive"
            app:key="@string/pref_key_mqtt_connect_keepalive"
            app:title="@string/pref_item_mqtt_connect_keepalive"
            app:defaultValue="60"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogTitle="@string/pref_item_mqtt_connect_connection_timeout"
            app:key="@string/pref_key_mqtt_connect_connection_timeout"
            app:title="@string/pref_item_mqtt_connect_connection_timeout"
            app:defaultValue="30"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="@string/pref_key_mqtt_connect_automatic_reconnect"
            app:title="@string/pref_item_mqtt_connect_automatic_reconnect"
            app:defaultValue="false"/>

        <EditTextPreference
            app:defaultValue="128000"
            app:dependency="@string/pref_key_mqtt_connect_automatic_reconnect"
            app:dialogTitle="@string/pref_item_mqtt_reconnect_max_delay"
            app:key="@string/pref_key_mqtt_reconnect_max_delay"
            app:title="@string/pref_item_mqtt_reconnect_max_delay"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>